         still supported (to read in data involving old-style nf generated by
         gp version < 2.10) but incurs a small speed penalty.
JD   33- move plotport.c to libpari
     34- default window size for hi-res plots using --graphic=X
     35- component(t_POL T, n) used to return polcoeff(T, n-1) for all n >= 1
         [ undocumented compatibility behaviour, deprecated since the
         introduction of polcoeff ], and raised an exception for n <= 0.
         Now returns a true GEN component whenever it exists and raises an
         exception when it does not [ n <= 0 or n > polcoeff(T)+1 ].
BA   36- Fl_addmul_pre: change arguments order to follow Fp_addmul convention
     37- issquarefree / isfundamental with integer argument: allow factored form
     38- change polred-type algorithm to return 'x' (no longer 'x-1') for
         the field of rational numbers (make it consistent with polredabs)
BA   39- ellisomat(E,{fl}) is now ellisomat(E,{p},{fl}) (p degree of isogenies)
     40- the definition used in polred / polredbest / polredabs to decide
         what is the "best" polynomial to return
     41- removed resultant_all, use RgX_resultant_all
     42- polresultant: no longer compute the content of arguments
         (potentially very expensive for a generically small gain)
     43- support Q(i) in Q_denom / Q_remove_denom
BA   44-[libpari] rename {FpXQXQ,FlxqXQ,F2xqXQ}V_aut{sum,trace,pow} to
                         {FpXQXQ,FlxqXQ,F2xqXQ}_aut{sum,trace,pow}
BA   45-[libpari] FpXQXQ_auttrace now identical to FpXQ_auttrace
BA   46-[libpari] RgX_type now only handles polynomials.
     47-log: change threshold between Taylor / AGM when x close to a power
        of 2 [#1934]
     48-[libpari] ZM_inv and QM_inv interface
     49- K.tu[2]: make it a t_INT if possible, else a t_POLMOD

  Removed
      1- file 'MACHINES' (no longer maintained)
      2- useless argument nf in ZC_nfval, ZC_nfvalrem, pr_equal, ZC_prdvd