@@ -61,9 +61,7 @@ Mod(1, 2)*x
 Mod(1, y)*x
 Mod(0, 2)
 Mod(0, 2)
-  *** _^_: Warning: Mod(a,b)^n with n >> b : wasteful.
 Mod(2, 7)
-  *** _^_: Warning: Mod(a,b)^n with n >> b : wasteful.
 Mod(4, 7)
    debug = 1
   *** _+_: Warning: coercing quotient rings; moduli 2 and 3 -> 1.
@@ -97,4 +95,4 @@ Mod(1, x)
 1
 1
 1
-Total time spent: 0
+Total time spent: 1
