@@ -19,7 +19,6 @@ Mod(5, 170141183460469232801598459991038101138)
 [216, [36, 6], [Mod(2, 247), Mod(160, 247)]]
 [216, [36, 6], [Mod(2, 247), Mod(160, 247)]]
 [2, [2], [-1]]
-  *** _^_: Warning: Mod(a,b)^n with n >> b : wasteful.
 Mod(84, 148)
 [599, 599, 599, 599]
 [1000000003700000003419, 1000000003700000003419, 1000000003700000003419, 100
@@ -239,4 +238,4 @@ x^2
 614357*I
 0
 4.0000000000000000000000000000000000000*I
-Total time spent: 1435
+Total time spent: 1367
